0.33 (to be)

  Support "module" plugins ("My::Plugin" in the config/plugins file)

  Make the badmailfrom plugin support (optional) rejection messages after the 
  rejection pattern (Robin Hugh Johnson)

  The ill-named $transaction->body_size() is depreceated now, use 
  $transaction->data_size() instead. Check your logs for LOGWARN messages 
  about "body_size" and fix your plugins. (Hanno Hecker)

  Instead of failing with cryptic message, ignore lines in config/plugins
  for uninstalled plugins. (John Peacock)

  Patch to prefork code to make it run (Leonardo Helman). Add --pretty
  option to qpsmtpd-prefork to change $0 for child processes (John Peacock).

  Add support for multiple plugin directories, whose paths are given by the
  'plugin_dirs' configuration.  (Devin Carraway, Nick Leverton)

  Greylisting DBs may now be stored in a configured location, and are
  looked for by default in /var/lib/qpsmtpd/greylisting in addition to the
  previous locations relative to the qpsmtpd binary.  (Devin Carraway)

  New Qpsmtpd::Postfix::Constants to encapsulate all of the current return
  codes from Postfix, plus script to generate it.  (Hanno Hecker)

  Experimental IPv6 support (forkserver only). (Mike Williams)

  Add ability to specific socket for syslog (Peter Eisch)

  Do the right thing for unimplemented AUTH mechanisms (Brian Szymanski)

  relay_only plugin for smart relay host. (John Peacock)

  Enhance the spamassassin plugin to support connecting to a remote
  spamd process (Kjetil Kjernsmo). 

  Add SSL encryption method to header to mirror other qmail/SSL patches.
  Add tls_before_auth to suppress AUTH unless TLS has already been 
  established (Robin Johnson).

  Fix "help" command when there's no "smtpgreeting" configured (the default)
  (Thanks to Thomas Ogrisegg)

  Move the Qpsmtpd::Auth POD to a top-level README to be more obvious.

  Add Qpsmtpd::Command to gather all parsing logic in one place (Hanno
  Hecker)
